--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "puppeteer": "^1.19.0",
     "tracer": "^1.0.0",
     "winston": "^3.2.1"
