--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airticketsearchernode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "AirTicketSearcherNode.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
-    "mailkit": "^0.1.6",
     "moment": "^2.24.0",
+    "nodemailer": "^6.3.0",
     "path": "^0.12.7",
     "puppeteer": "^1.19.0",
     "table": "^5.4.5",
