--- a/config.json
+++ b/config.json
@@ -1,13 +1,19 @@
 {
-    "headless": false,
+    "headless": true,
     "chromePath": "/usr/bin/chromium",
-    "monthsToLookFor": 1,
+    "monthsToLookFor": 13,
     "maxPrice": 14000,
     "kiwi" : {
         "origin" : "prague-czechia",
         "destinations" : "tokyo-japan,kansai-international-osaka-japan,fukuoka-fukuoka-japan",
         "numberOfNights": "12-16",
         "emailSubject": "Kiwi - Japan"
+    },
+    "pelikan": {
+        "origin": "PRG",
+        "destinations": "TYO,KIX,FUK",
+        "emailSubject": "Pelikan - Japan",
+        "numberOfNights": 14
     }
 
 }
