--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "fs": "0.0.1-security",
     "moment": "^2.24.0",
     "nodemailer": "^6.3.0",
+    "os": "^0.1.1",
     "path": "^0.12.7",
     "puppeteer": "^1.19.0",
+    "systeminformation": "^4.14.4",
     "table": "^5.4.5",
     "table-builder": "^2.1.1",
     "tracer": "^1.0.0",
